--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,10 @@
 
 title: Christy's Pages
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is the description.
 
 # Build settings
-theme: minima
+theme: hacker
 plugins:
   - jekyll-feed
 
