--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is the description.
 
 # Build settings
-theme: hacker
+theme: minima
 plugins:
   - jekyll-feed
 
