--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-tactile
+remote_theme: jekyll-theme-dinky
 plugins:
   - jekyll-feed
 
