--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: garth-jekyll-theme
+theme: minima
 plugins:
   - jekyll-feed
 
