--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ twitter_username: Dr_Glocktopus
 github_username:  christytc10
 
 # Build settings
-theme: minima
+#theme: minima
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
