--- a/source/config.toml
+++ b/source/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://christytc10.github.io/"
 languageCode = "en-us"
 title = "Christy Codes"
-theme = "m10c"
+theme = "hugo-theme-m10c"
 
 [menu]
   [[menu.main]]
