--- a/source/config.toml
+++ b/source/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://christytc10.github.io/"
+baseURL = "https://christytc10.github.io/"
 languageCode = "en-us"
 title = "Christy Codes"
 theme = "hugo-theme-m10c"
